[project]
name = "daphne-hrv"
version = "0.3.0"
description = "2VV Daphne HRV Home Assistant custom integration"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "homeassistant>=2024.10",
    "pymodbus>=3.11.1,<3.12",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.0",
]

[tool.uv]
package = false
